k8s/infrastructure/controllers/sealed-secrets/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-sealedsecrets-ingress
  namespace: sealed-secrets
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: sealed-secrets}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '8081', protocol: TCP}]]}  # Prometheus
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-sealedsecrets-egress
  namespace: sealed-secrets
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: sealed-secrets}}
  egress:
    - {toEntities: [kube-apiserver]}
